    - Add debian/upstream2orig script which hardlinks upstream tarballs as debian
      original tarballs and extracts them into proper subdirectories. It also
      creates an empty main original tarball as it is required by
      3.0 (quilt) format.
    - Tweak debian/rules for new format.
  * Make debian/rules parallel safe.
  * Add README.source.

 -- Modestas Vainius <modax@debian.org>  Sun, 28 Feb 2010 23:00:19 +0200

kde-l10n (4:4.3.5-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Replace common dependencies of each l10n package with a substvar
    ${kde-l10n:Depends}. It is set in debian/rules.

  [ Pino Toscano ]
  * Replace (c) with (C) in copyright, and add "Copyright".
  * Remove duplicate "Section: kde" in binary packages.
  * As debhelper is used, add ${misc:Depends} to the various binaries depends.

  [ Ana Beatriz Guerrero Lopez ]
  * Update copyright years. 
  * Update Standards-Version to 3.8.4, no changes required.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Fri, 05 Feb 2010 06:11:00 +0100

kde-l10n (4:4.3.4-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Modestas Vainius:

  * Bump depends to kdelibs5 4:4.3.0.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 09 Dec 2009 19:34:11 +0100

kde-l10n (4:4.3.2-1) unstable; urgency=low

  * New upstream release. New language: fy.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Tue, 06 Oct 2009 18:43:54 +0200

kde-l10n (4:4.3.1-1) unstable; urgency=low

  * New upstream release. New language: hr.
  * Change Latvian to Serbian in Serbian's description.  (Closes: #544167) 
  * Update Standards-Version to 3.8.3, no changes required.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Thu, 03 Sep 2009 01:03:44 +0200

kde-l10n (4:4.3.0-2) unstable; urgency=low

  * New language: Chhattisgarhi (hne). 

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Thu, 06 Aug 2009 00:14:40 +0200

kde-l10n (4:4.3.0-1) unstable; urgency=low
