@@ -1,0 +1,72 @@
+# kde-i18n language <=> kde-l10n language
+af=af
+ar=ar
+az=az
+be=be
+bg=bg
+bn=bnin
+br=br
+bs=bs
+ca=ca
+cs=cs
+csb=csb
+cy=cy
+da=da
+de=de
+el=el
+engb=engb
+eo=eo
+es=es
+et=et
+eu=eu
+fa=fa
+fi=fi
+fr=fr
+fy=fy
+ga=ga
+gl=gl
+he=he
+hi=hi
+hr=hr
+hu=hu
+is=is
+it=it
+ja=ja
+kk=kk
+km=km
+ko=ko
+lt=lt
+lv=lv
+mk=mk
+mn=mn
+ms=ms
+nb=nb
+nds=nds
+nl=nl
+nn=nn
+pa=pa
+pl=pl
+pt=pt
+ptbr=ptbr
+ro=ro
+ru=ru
+rw=rw
+se=se
+sk=sk
+sl=sl
+sr=sr
+srlatin=srlatin
+ss=ss
+sv=sv
+ta=ta
+te=te
+tg=tg
+th=th
+tr=tr
+uk=uk
+uz=uz
+uzcyrillic=uzcyrillic
+vi=vi
+wa=wa
+zhcn=zhcn
+zhtw=zhtw
